--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ httpx = "^0.23.3"
 pytest-asyncio = "^0.20.3"
 asgi-lifespan = "^2.0.0"
 anyio = "^3.6.2"
+black = "^23.1.0"
 
 [build-system]
 requires = ["poetry-core"]
